--- a/main.css
+++ b/main.css
@@ -1,28 +1,38 @@
+/* Font families */
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
+
 /* my css default starter code */
 body {
     margin: 0;
     padding: 0
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    color: hsl(192, 100%, 9%);
 }
 
 /* logo and try it button content */
 
 #logo-try-container {
     display: flex;
+    margin: auto;
     margin-top: 80px;
+    width: 90%;
 }
 
 #try-it-button {
     margin-left: auto;
-    margin-right: 90px;
-}
-
-#logo-container {
-    margin-left: 90px;
 }
 
 #try-it-button button {
@@ -33,4 +43,59 @@ h1, h2, h3, h4, h5, h6, p {
     color: hsl(322, 100%, 66%);
     cursor: pointer;
     outline: none;
+}
+
+/* intro to project landing page  */
+
+#intro-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 90px;
+    text-align: center;
+}
+
+#intro-container h1 {
+    font-size: 37px;
+}
+
+#intro-text {
+    width: 40%;
+    margin: auto;
+}
+
+#intro-text p {
+    margin-top: 20px;
+}
+
+#get-started-button-container {
+    margin-top: 40px;
+}
+
+#get-started-button-container button {
+    padding: 25px 90px;
+    border: none;
+    border-radius: 30px;
+    font-size: 17px;
+    background-color: hsl(322, 100%, 66%);
+    cursor: pointer;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: 0.5s ease;
+}
+
+#get-started-button-container button:hover {
+    opacity: 0.9;
+}
+
+/* demo image sketch */
+#demo-image-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 90px;
+}
+
+#demo-image-container img {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 80%;
 }
