--- a/main.css
+++ b/main.css
@@ -99,3 +99,40 @@ p {
    margin-right: auto;
    width: 80%;
 }
+
+/* communities and messages */
+
+#grid-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 90px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.icon-container {
+    width: 50%;
+    margin: auto;
+}
+
+.icon-container .people-icon {
+    margin-left: 69px;
+}
+
+.icon-container img {
+    margin-left: 55px;
+}
+
+.icon-container h1 {
+    font-size: 70px;
+    text-align: center;
+}
+
+.icon-container p{
+    font-size: 18px;
+    text-align: center;
+    color: lightgray;
+}
+
+
+
