--- a/main.css
+++ b/main.css
@@ -16,10 +16,13 @@ h1, h2, h3, h4, h5, h6{
 }
 
 p {
-    margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     color: hsl(192, 100%, 9%);
+}
+
+img {
+    width: 100%;
 }
 
 /* logo and try it button content */
@@ -47,14 +50,14 @@ p {
 
 /* intro to project landing page  */
 
-#intro-container {
+.intro-container {
     width: 90%;
     margin: auto;
     margin-top: 90px;
     text-align: center;
 }
 
-#intro-container h1 {
+.intro-container h1 {
     font-size: 37px;
 }
 
@@ -67,11 +70,11 @@ p {
     margin-top: 20px;
 }
 
-#get-started-button-container {
+.get-started-button-container {
     margin-top: 40px;
 }
 
-#get-started-button-container button {
+.get-started-button-container button {
     padding: 25px 90px;
     border: none;
     border-radius: 30px;
@@ -82,7 +85,7 @@ p {
     transition: 0.5s ease;
 }
 
-#get-started-button-container button:hover {
+.get-started-button-container button:hover {
     opacity: 0.9;
 }
 
@@ -110,17 +113,21 @@ p {
     grid-template-columns: 1fr 1fr;
 }
 
+#grid-container img {
+    width: 10%;
+}
+
 .icon-container {
     width: 50%;
     margin: auto;
 }
 
 .icon-container .people-icon {
-    margin-left: 69px;
+    margin-left: 23%;
 }
 
 .icon-container img {
-    margin-left: 55px;
+    margin-left: 17%;
 }
 
 .icon-container h1 {
@@ -136,17 +143,50 @@ p {
 
 /* grow together section */
 
-#grow-together-body {
+.grow-together-body {
     margin-top: 90px;
 }
 
-#grow-together-container {
-    width: 100%;
-    height: 400px;
-    background-color: hsl(207, 100%, 98%);
+.topimg {
+    display: block;
 }
 
+#grow-together-container {
+    background-color: hsl(207, 100%, 98%);
+    vertical-align: top;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
+.design-img {
+    width: 65%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.text {
+    margin-top: 17%;
+    margin-left: 10%;
+}
+
+/* Flowing conversations section */
+
+#flowing-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 200px;
+}
+
+/* Users section */
+
+.users-container {
+    margin-top: 200px;
+}
+
+.users-bottom-img {
+    transform: scaleX(-1)
+}
 
 
 
