--- a/main.css
+++ b/main.css
@@ -48,6 +48,12 @@ img {
     outline: none;
 }
 
+#try-it-button button:hover {
+    color: black;
+    background-color: hsl(322, 100%, 66%);
+    transition: all 0.2s ease;
+}
+
 /* intro to project landing page  */
 
 .intro-container {
@@ -176,6 +182,10 @@ img {
     margin-top: 200px;
 }
 
+.flowing-text {
+    width: 75%;
+}
+
 /* Users section */
 
 .users-container {
@@ -199,6 +209,136 @@ img {
 
 footer {
     vertical-align: top;
-    height: 400px;
     background-color: hsl(192, 100%, 9%);
+}
+
+.footer-grid {
+    width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.footer-container {
+    width: 70%;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.footer-logo {
+    display: block;
+    width: 50%;
+}
+
+.footer-text {
+    height: 100px;
+    width: 80%;
+}
+
+.footer-text p {
+    color: white;
+}
+
+.sub-grid-container {
+    display: grid;
+    grid-template-columns: .2fr 1fr;
+}
+
+.sub-container {
+    margin-top: 20px;
+}
+
+.phone-icon {
+    width: 30%;
+}
+
+.contact-info p {
+    color: white;
+    margin: 0;
+}
+
+.email-container {
+    margin-top: 10px;
+}
+
+/* social media icons */
+.social-media-container {
+    margin-top: 75px;
+    display: flex;
+}
+
+.social-container {
+    margin-left: 10px;
+}
+
+.fa {   
+  font-size: 60px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  padding: 20px 10px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+
+/* container two (right side of footer) */
+.footer-container-two {
+    width: 70%;
+}
+
+.logo-newsletter-container h2 {
+    color: white;
+}
+
+.input-form {
+    width: 100%;
+}
+
+.input-form input {
+    width: 60%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+}
+
+.input-form button {
+    width: 120px;
+    margin-left: 20px;
+    padding: 11px 11px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    background-color: hsl(322, 100%, 66%);
+    cursor: pointer;
+    outline: none;
+}
+
+.input-form button:hover {
+    opacity: 0.9;
+    transition: all 0.3s ease;
+}
+
+.spacer {
+    width: 100%;
+    height: 100px;
 }
