--- a/main.css
+++ b/main.css
@@ -342,3 +342,43 @@ footer {
     width: 100%;
     height: 100px;
 }
+
+
+/* Mobil css */
+
+@media only screen and (max-width: 600px) {
+    img {
+        width: 100%;
+    }
+
+    #logo-try-container {
+        display: flex;
+        margin: auto;
+        margin-top: 80px;
+        width: 90%;
+        height: 100px;
+    }
+
+    #logo-try-container img {
+        width: 75%;
+    }
+
+    #try-it-button {
+        margin-left: auto;
+        border: 1px solid black;
+    }
+
+    #try-it-button button {
+        font-size: 18px;
+        border-radius: 20px;
+        border: 1px solid hsl(322, 100%, 66%);
+        color: hsl(322, 100%, 66%);
+        cursor: pointer;
+        outline: none;
+    }
+
+    #intro-text {
+        width: 90%;
+        margin: auto;
+    }     
+}
