--- a/main.css
+++ b/main.css
@@ -302,7 +302,7 @@ footer {
 
 /* container two (right side of footer) */
 .footer-container-two {
-    width: 70%;
+    width: 90%;
 }
 
 .logo-newsletter-container h2 {
@@ -322,7 +322,7 @@ footer {
 }
 
 .input-form button {
-    width: 120px;
+    width: 25%;
     margin-left: 20px;
     padding: 11px 11px;
     font-size: 14px;
@@ -341,6 +341,26 @@ footer {
 .spacer {
     width: 100%;
     height: 100px;
+}
+
+/* Ipad */
+
+@media only screen and (max-width: 800px){
+    #intro-text {
+        width: 70%;
+        margin: auto;
+    }
+
+    .input-form {
+        width: 100%;
+        margin-top: 40px;
+    }
+
+    .input-form button {
+        width: 40%;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
 }
 
 
